# AlarmClock

./: CMakeLists.txt  gpio.h  led_driver.c  led_driver.h
.github/workflows/: ci.yml
scripts/: unity_to_junit.py
test-cases/: LED-TC-001.md  LED-TC-002.md  TC-001.md  TC-002.md
tests/: test_led_driver.c
